<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/customAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="@dimen/dimen_0dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <!-- Botão de Voltar -->
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/todo"
                android:padding="@dimen/dimen_8dp"
                android:src="@drawable/ic_back"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />


            <!-- Botão com Ícone de Estrela -->
            <ImageButton
                android:id="@+id/starButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/dimen_25dp"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/dimen_8dp"
                android:src="@android:drawable/btn_star_big_on"
                app:tint="@color/white"
                android:contentDescription="@string/todo" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_61dp"
        android:layout_marginVertical="@dimen/dimen_18dp"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_1dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customAppBar"
        tools:ignore="MissingConstraints,TextSizeCheck">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:background="@drawable/rounded_corner_background"
            android:src="@drawable/ic_logo_petr4" />

        <RelativeLayout
            android:id="@+id/rllHeaderCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_weight="7">

            <TextView
                android:id="@+id/txtStockID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratbold"
                android:text="@string/petr4"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/txtCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtStockID"
                android:fontFamily="@font/montserratmedium"
                android:text="@string/petrobras_sa"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/dimen_16sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lnlStockPrices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_weight="0.2"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtStockPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratmedium"
                android:text="@string/r_45_00"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_16sp" />

            <TextView
                android:id="@+id/txtStockPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratblack"
                android:text="@string/_1_45"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/dimen_13sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="@dimen/dimen_18dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:ignore="MissingConstraints">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_298dp"
            android:layout_marginStart="@dimen/dimen_25dp"
            android:layout_marginEnd="@dimen/dimen_25dp"

            android:paddingBottom="@dimen/dimen_50dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_25dp"
            android:fadeScrollbars="true"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/lnlListBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>
        </HorizontalScrollView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_50dp"
            android:layout_marginEnd="@dimen/dimen_50dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/hist_rico"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="@dimen/dimen_25dp">

        <!-- Botão VENDER -->
        <Button
            android:id="@+id/btnVender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/vender"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dimen_18sp" />

        <!-- Botão COMPRAR -->
        <Button
            android:id="@+id/btnComprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_weight="2"
            android:background="@drawable/rounded_button_active"
            android:padding="@dimen/dimen_16dp"
            android:text="@string/comprar"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/dimen_18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/modalLoad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:background="@color/colorPrimary">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="@color/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/customAppBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>